src/styles/global.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@font-face {
	font-family: "Midnight";
	src: url("/fonts/Midnight.woff2") format("woff");
	font-weight: normal;
	font-style: normal;
	font-display: swap;
}

:root {
	font-family: "Inter", sans-serif;
}

@supports (font-variation-settings: normal) {
	:root {
		font-family: "Inter var", sans-serif;
	}
}

:root {
	--astro-code-color-text: #ffffff;
	--astro-code-color-background: #131313;
	--astro-code-token-constant: #8b919b;
	--astro-code-token-string: #ffffff;
	--astro-code-token-comment: #8b919b;
	--astro-code-token-keyword: #e83906;
	--astro-code-token-parameter: #ffffff;
	--astro-code-token-function: #ffffff;
	--astro-code-token-string-expression: #c7f801;
	--astro-code-token-punctuation: #ffffff;
	--astro-code-token-link: #ffffff;
	--grid-gap: 4vw;
	--base-padding-x: max(6vw, 60px);
	--base-padding-y: clamp(30px, 4vw, 50px);
}

@media (max-width: 812px) {
	:root {
		--base-padding-x: 25px;
		--base-padding-y: 25px;
	}
}

html {
	scrollbar-gutter: stable;
	@apply overflow-x-hidden bg-slate-100 text-stone-900;
}

/* Custom scrollbar */

::-webkit-scrollbar-track {
	border: none;
	background-color: transparent;
}
::-webkit-scrollbar {
	width: 4px;
	background-color: transparent;
}
::-webkit-scrollbar-thumb {
	background-color: #1b1816;
	border-radius: 2px;
}
::-webkit-scrollbar-thumb:hover {
	background-color: #000;
}
.dark ::-webkit-scrollbar-thumb {
	background-color: #e8e1e1;
}
.dark ::-webkit-scrollbar-thumb:hover {
	background-color: #ffffff;
}

/* Selection */

::-moz-selection {
	color: white;
	background: orange;
}
::selection {
	color: white;
	background: orange;
}
.dark ::-moz-selection {
	color: orange;
	background: white;
}
.dark ::selection {
	color: orange;
	background: white;
}

.select-none {
	-webkit-tap-highlight-color: transparent;
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	user-select: none;
}

.prose-styles {
	@apply prose mx-auto max-w-3xl text-black prose-headings:font-bold prose-headings:tracking-tighter prose-headings:text-black prose-a:text-slate-500 hover:prose-a:text-black prose-blockquote:border-l-slate-950 prose-blockquote:text-slate-500 prose-code:text-black prose-pre:rounded-lg prose-li:marker:text-black;
}

.prose-styles a {
	color: orange;
	text-decoration: underline;
	text-underline-offset: 2px;
}

.section {
	position: relative;
	width: 100%;
	display: grid;
	grid-template-columns: repeat(12, minmax(0, 1fr));
	column-gap: var(--grid-gap);
	padding: var(--base-padding-y) var(--base-padding-x);
}

.squircle {
	--squircle-smooth: 1;
	--squircle-radius: 10px;
	border-radius: var(--squircle-radius);
	mask-image: paint(squircle);
}

.squircle-bg {
	--squircle-smooth: 1;
	--squircle-radius: 10px;
	background: #272521;
	mask-image: paint(squircle);
}

.squircle-bg-white {
	--squircle-smooth: 1;
	--squircle-radius: 10px;
	background: #fff;
	mask-image: paint(squircle);
}

.squircle-hover:hover {
	--squircle-smooth: 1;
	--squircle-radius: 10px;
	background: #000;
	mask-image: paint(squircle);
}

.squircle-white-hover:hover {
	--squircle-smooth: 1;
	--squircle-radius: 10px;
	background: #fff;
	mask-image: paint(squircle);
}

